--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
     <h1>Project Hand-in 4</h1>
     <div id="div_page_desc">
-        <p>Example Variation 3</p>
+        <p>Dataset: Share of youth not in education, employment or training (NEET), total (% of youth population) </p>
     </div>
     <div id="div_visuals">
+
         <div id="div_data_desc">
-            <h2>Dataset: Youth in NEET </h2>
+            <h2>Years 1990 - 2017 </h2>
+        </div>
+        <div id="sliderContainer">
+            <input id="timeslide" type="range" min="0" max="12" value="0" step="1"/><br>
+            <span id="range">Select Year</span>
         </div>
         <svg id="vis" class="svg_boxes">
             <div id="map"></div>
