--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CPSC 583: Project Hand-In 4</title>
-    <link rel="stylesheet" type="text/css" href="project4.css" />
+    <link rel="stylesheet" type="text/css" href="project.css" />
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
 </head>
