--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
 </head>
 <body>
-    <h1>Project Hand-in 4</h1>
+    <h1>Share of youth not in education, employment or training (NEET, % of total)</h1>
     <div id="div_page_desc">
-        <p>Dataset: Share of youth not in education, employment or training (NEET), total (% of youth population) </p>
+        <p>Project Hand-in 4</p>
     </div>
     <div id="div_visuals">
 
