--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Share of youth not in education, employment or training (NEET, % of total)</h1>
     <div id="div_page_desc">
-        <p>Project Hand-in 4</p>
+        <p>CPSC 583 Project Hand-in 4</p>
     </div>
     <div id="div_visuals">
 
