--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <p></p>
     </div>
     <div id="div_visuals">
-
         <div id="div_data_desc">
-            <h2>Years 1990 - 2017 </h2>
+            <div>
+                <button id = "play">Years 1990 - 2017</button>
+            </div>
         </div>
         <div id="sliderContainer">
             <input id="timeslide" type="range" min="0" max="12" value="0" step="1"/><br>
