--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="div_visuals">
         <div id="div_data_desc">
             <div>
-                <button id = "play">Years 1990 - 2017</button>
+                <button id = "play">Play: Years 1990 - 2017</button>
             </div>
         </div>
         <div id="sliderContainer">
